# Soccer-Match-Analytics

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yml
data/: tournament_01.csv
docs/: index.html  styles.css
src/soccer/: __init__.py  calibration.py  clean.py  cli.py  elo.py  io_csv.py  metrics.py  report.py
templates/: report.html  report2.html
tests/integration/: test_report.py
tests/smoke/: test_smoke.py
tests/unit/: test_calibration.py  test_clean.py  test_elo.py  test_metrics.py
